Fix styles for Slicing option that was covering up variation select

--- a/resources/assets/styles/layouts/_quickview.scss
+++ b/resources/assets/styles/layouts/_quickview.scss
@@ -277,7 +277,8 @@ div.pp_woocommerce_quick_view {
     }
   }
 
-  .wcpa_wrap .wcpa_field_wrap {
+  .wcpa_wrap .wcpa_field_wrap,
+  .wcpa_wrap .wcpa_section {
     margin-bottom: 0 !important;
   }
 
